🐛 FIX: Fix HibernateCaster .isBlank() reference for Java 8